--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
